<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/quicksand"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@id/logo"
        android:layout_marginEnd="65dp"
        />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40dp"
        android:elevation="2dp"
        android:shadowColor="@color/black"
        android:textStyle="bold"
        android:textColor="@color/purple_300"
        android:fontFamily="@font/quicksand"
        app:layout_constraintTop_toBottomOf="@id/welcome"
        app:layout_constraintStart_toStartOf="@id/welcome"
        android:layout_marginStart="37dp"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_tree"
        android:layout_width="410dp"
        android:layout_height="380dp"
        app:lottie_rawRes="@raw/care1"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:layout_constraintStart_toStartOf="@id/app_name"
        app:layout_constraintEnd_toEndOf="@id/app_name"
        android:layout_marginEnd="40dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        />

    <TextView
        android:id="@+id/alredy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Already_part"
        android:textSize="18dp"
        android:textStyle="bold"
        android:fontFamily="@font/quicksand"
        app:layout_constraintTop_toBottomOf="@id/animation_tree"
        app:layout_constraintStart_toStartOf="@id/animation_tree"
        android:layout_marginStart="40dp"
        />

    <Button
        android:id="@+id/btn_gs"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_gs"
        android:textColor="@color/white"
        android:background="@drawable/btn_welcome"
        app:layout_constraintTop_toBottomOf="@id/alredy"
        app:layout_constraintEnd_toEndOf="@id/animation_tree"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        />

    <TextView
        android:id="@+id/dont_know"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_know"
        android:textSize="18dp"
        android:textStyle="bold"
        android:fontFamily="@font/quicksand"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/btn_gs"
        app:layout_constraintStart_toStartOf="@id/animation_tree"
        android:layout_marginStart="25dp"
        />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        app:layout_constraintTop_toBottomOf="@id/dont_know"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:background="@drawable/btn_welcome"
        app:layout_constraintStart_toStartOf="@id/dont_know"
        android:layout_marginStart="20dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>