<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SingInActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/sing_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sing In"
        android:textSize="35dp"
        android:fontFamily="@font/quicksand"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="-15dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintEnd_toStartOf="@id/logo"
        />

    <TextView
        android:id="@+id/hi_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Hi_you"
        android:textSize="15dp"
        android:textStyle="bold"
        android:fontFamily="@font/quicksand"
        app:layout_constraintTop_toBottomOf="@id/sing_in"
        app:layout_constraintStart_toStartOf="@id/sing_in"
        android:layout_marginTop="15dp"
        />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:hint="Email"
        android:fontFamily="@font/quicksand"
        app:layout_constraintTop_toBottomOf="@id/hi_you"
        app:layout_constraintStart_toStartOf="@id/sing_in"
        android:layout_marginStart="0dp"
        android:layout_marginTop="30dp"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:fontFamily="@font/quicksand"
        android:hint="Password"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/editEmail"
        app:layout_constraintStart_toStartOf="@id/editEmail"
        />

    <Button
        android:id="@+id/btn_singin"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:text="@string/sing_in"
        android:textStyle="bold"
        android:background="@drawable/btn_welcome"
        android:fontFamily="@font/quicksand"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/editPassword"
        app:layout_constraintStart_toStartOf="@id/editPassword"
        app:layout_constraintEnd_toEndOf="@id/editPassword"
        android:layout_marginTop="40dp"

        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_account"
        android:textStyle="bold"
        android:fontFamily="@font/quicksand"
        android:textSize="12dp"
        android:background="@color/transparent"
        app:layout_constraintTop_toBottomOf="@id/btn_singin"
        app:layout_constraintStart_toStartOf="@id/btn_singin"
        android:layout_marginTop="10dp"
        />




</androidx.constraintlayout.widget.ConstraintLayout>